# ai-blog-writer

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
ai_agent/: README.md  app.py  check_code.sh  fix_code.sh  pyproject.toml  requirements.txt
ai_agent/config/: settings.py
ai_agent/src/: main.py
ai_agent/src/integrations/: tools.py
ai_agent/src/pipeline/: ai_generator.py  prompt_builder.py
ai_agent/src/utils/: constants.py
config/: constants.py  settings.py
data/: example_output.json  sample_input.json
docs/: README.md
src/: main.py
src/integrations/: google_docs.py  tools.py
src/pipeline/: ai_generator.py  prompt_builder.py
src/utils/: constants.py  helpers.py
