[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-blog-writer"
version = "0.1.0"
description = "AI Blog Writer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi[standard]>=0.115.12",
    "google-search-results>=2.4.2",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-google-genai>=2.1.4",
    "loguru>=0.7.3",
    "markdown>=3.8",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "ruff>=0.11.8",
    "serpapi>=0.1.5",
    "uuid>=1.30",
    "uvicorn>=0.34.2",
    "validators>=0.35.0",
]

[tool.ruff]
# Allow lines to be as long as 88 characters
line-length = 88
# Target Python 3.11
target-version = "py311"
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".env",
    ".venv",
    "__pycache__",
    "*.pyc",
]

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B", "I", "N", "W"]
ignore = [
    "E501",    # line too long
    "B905",    # zip without strict=True (requires Python 3.10+)
    "D107",    # Missing docstring in __init__
    "D203",    # One blank line before class docstring
    "D213"    # Multi-line summary should start at second line
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

